[package]
name = "oxirs-tauri"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "OxiRS desktop application — chat UI, visual SPARQL query builder, CAN bus monitor"
keywords = ["tauri", "desktop", "sparql", "chat", "rdf"]
categories = ["gui", "web-programming"]
rust-version.workspace = true
publish = false

[[bin]]
name = "oxirs-tauri"
path = "src/main.rs"

[dependencies]
tauri = { workspace = true, default-features = false, features = ["wry"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
thiserror.workspace = true
fastrand.workspace = true
tracing.workspace = true
anyhow.workspace = true
oxirs-canbus.workspace = true
oxirs-core.workspace = true
# oxirs-chat is not part of [workspace.dependencies] (root Cargo.toml is owned
# elsewhere); pin it to the same path/version pattern the workspace uses for
# every other oxirs-* crate so this stays a single source of truth.
oxirs-chat = { version = "0.3.3", path = "../../ai/oxirs-chat" }

[build-dependencies]
tauri-build = { workspace = true }

[features]
default = ["tauri/default"]
