[package]
name = "oxirs-geosparql"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "GeoSPARQL implementation for spatial data and queries"
keywords = ["geosparql", "spatial", "geometry", "gis", "rdf"]
categories = ["algorithms", "data-structures", "science"]
readme = "README.md"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
oxirs-core.workspace = true

# SciRS2 dependencies for spatial computing
scirs2-core = { workspace = true }
scirs2-linalg = { workspace = true }
scirs2-graph = { workspace = true }
scirs2-stats = { workspace = true }

# Geometry and spatial libraries
geo = "0.29"
geo-types = "0.7"
wkt = "0.14"
quick-xml = { version = "0.38", optional = true }
geojson = { version = "0.24", optional = true }
shapefile = { version = "0.7", optional = true }
geos = { version = "10.0", optional = true }
proj = { version = "0.31", optional = true }  # PROJ 9.x compatible
geo-buffer = { version = "0.2", optional = true }
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
flatgeobuf = { version = "5.0", optional = true }
geo-traits = { version = "0.3", optional = true }
geozero = { version = "0.14", optional = true }
fallible-streaming-iterator = { version = "0.1", optional = true }
mvt = { version = "0.10", optional = true }
topojson = { version = "0.5", optional = true }

# R-tree spatial indexing
rstar = "0.12"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Utilities
once_cell = "1.21"
parking_lot = "0.12"
regex = "1.12"
dashmap = { version = "6.1", optional = true }

# Optional parallel processing
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
tempfile = "3.24"
approx = "0.5"
proptest = "1.7"

[features]
default = ["wkt-support"]
wkt-support = []
gml-support = ["quick-xml"]
geojson-support = ["geojson"]
kml-support = ["quick-xml"]
gpx-support = ["quick-xml"]
shapefile-support = ["shapefile"]
geopackage = ["rusqlite"]
flatgeobuf-support = ["flatgeobuf", "geo-traits", "geozero", "fallible-streaming-iterator"]
mvt-support = ["mvt"]
topojson-support = ["topojson"]
geos-backend = ["geos"]
rust-buffer = ["geo-buffer"]
proj-support = ["proj"]
parallel = ["rayon", "dashmap"]
gpu = []
cuda = ["gpu", "scirs2-core/cuda"]
metal = ["gpu", "scirs2-core/metal"]
wgpu_backend = ["gpu", "scirs2-core/wgpu_backend"]
performance = ["parallel", "dashmap", "gpu"]

[[bench]]
name = "spatial_operations"
harness = false

[[bench]]
name = "spatial_index"
harness = false

[[bench]]
name = "buffer_performance"
harness = false

[[bench]]
name = "performance_comparison"
harness = false

[[bench]]
name = "benchmark_tracking"
harness = false

[[bin]]
name = "compare_benchmarks"
path = "src/bin/compare_benchmarks.rs"

# Examples with feature requirements
[[example]]
name = "geojson_support"
required-features = ["geojson-support"]

[[example]]
name = "kml_support"
required-features = ["kml-support"]

[[example]]
name = "gpx_support"
required-features = ["gpx-support"]

[[example]]
name = "shapefile_support"
required-features = ["shapefile-support"]

[[example]]
name = "gpu_operations"
required-features = ["gpu"]

[[example]]
name = "geopackage_support"
required-features = ["geopackage"]

[[example]]
name = "flatgeobuf_support"
required-features = ["flatgeobuf-support"]

[[example]]
name = "mvt_support"
required-features = ["mvt-support"]

[[example]]
name = "topojson_support"
required-features = ["topojson-support"]
