[package]
name = "oxirs-geosparql"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "GeoSPARQL implementation for spatial data and queries"
keywords = ["geosparql", "spatial", "geometry", "gis", "rdf"]
categories = ["algorithms", "data-structures", "science"]
readme = "README.md"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# SciRS2 dependencies for spatial computing
scirs2-core = { workspace = true }

# Geometry and spatial libraries
geo.workspace = true
geo-types = "0.7"
wkt.workspace = true
quick-xml = { workspace = true, optional = true }
geojson = { workspace = true, optional = true }
shapefile = { version = "0.8", optional = true }
# NOTE: the GEOS (geos / geos-sys C FFI) computational-geometry backend has been
# quarantined into the `oxirs-geosparql-adapter-geos` crate (publish = false) per
# the COOLJAPAN Pure Rust Policy v2, so this published crate's --all-features
# dependency surface stays 100% Pure Rust. Use that adapter for GEOS-backed
# buffering / boundary / Egenhofer & RCC8 boundary predicates.
oxigdal-proj = { version = "0.1", optional = true }  # Pure Rust CRS transformation (COOLJAPAN)
geo-buffer = { version = "0.2", optional = true }
oxisql-core = { workspace = true, optional = true }
oxisql-sqlite-compat = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
# Pure Rust Policy v2: default-features OFF drops flatgeobuf's `http`/`default-tls`
# features (reqwest 0.12 → hyper-tls → native-tls → openssl-sys/security-framework-sys).
# oxirs uses only the local `FgbReader`/`FgbWriter` (geozero path), so remote HTTP-range
# reading of `.fgb` over the network is the only capability dropped; local `.fgb`
# read/write is fully retained. flatgeobuf exposes no rustls passthrough.
flatgeobuf = { version = "6.0", optional = true, default-features = false }
geo-traits = { version = "0.3", optional = true }
geozero = { version = "0.15", optional = true }
fallible-streaming-iterator = { version = "0.1", optional = true }
mvt = { version = "0.13", optional = true }

# R-tree spatial indexing
rstar.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Utilities
once_cell.workspace = true
parking_lot.workspace = true
regex.workspace = true

# Optional parallel processing
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
approx = "0.5"
proptest.workspace = true

[features]
default = ["wkt-support"]
wkt-support = []
gml-support = ["quick-xml"]
geojson-support = ["geojson"]
kml-support = ["quick-xml"]
gpx-support = ["quick-xml"]
shapefile-support = ["shapefile"]
geopackage = ["oxisql-core", "oxisql-sqlite-compat", "tokio"]
flatgeobuf-support = ["flatgeobuf", "geo-traits", "geozero", "fallible-streaming-iterator"]
mvt-support = ["mvt"]
topojson-support = []
rust-buffer = ["geo-buffer"]
proj-support = ["oxigdal-proj"]
parallel = ["rayon"]
gpu = []
# NOTE (cargo-upgrade sweep, 2026-07-02): scirs2-core removed its `cuda` feature in
# 0.6.x (CUDA moved to the standalone oxicuda-* backend crates per SCIRS2_POLICY.md;
# see scirs2-core's own Cargo.toml comment). The old `scirs2-core/cuda` edge below was
# a dangling feature reference that unconditionally broke workspace-wide dependency
# resolution (any `cargo` invocation, not just ones requesting this feature) once the
# workspace.dependencies scirs2-core requirement was bumped to "0.6.0". Pre-existing,
# unrelated to this sweep's dependency bumps -- dropped the invalid edge to restore a
# resolvable graph. Wiring real CUDA support through oxicuda-* (mirroring the
# oxirs-vec-adapter-cuda / oxirs-geosparql-adapter-geos quarantine-crate pattern) is a
# separate, larger follow-up left out of scope here.
cuda = ["gpu"]
metal = ["gpu", "scirs2-core/metal"]
# NOTE (cargo-upgrade sweep, 2026-07-02): scirs2-core's WebGPU feature is named `wgpu`,
# not `wgpu_backend` -- the old edge below referenced a feature name that has never
# existed in scirs2-core (same class of pre-existing, sweep-unrelated resolver
# blocker as `cuda` above). Corrected to point at the real feature name.
wgpu_backend = ["gpu", "scirs2-core/wgpu"]
performance = ["parallel", "gpu"]

[[bench]]
name = "spatial_operations"
harness = false

[[bench]]
name = "spatial_index"
harness = false

[[bench]]
name = "buffer_performance"
harness = false

[[bench]]
name = "performance_comparison"
harness = false

[[bench]]
name = "benchmark_tracking"
harness = false

[[bin]]
name = "compare_benchmarks"
path = "src/bin/compare_benchmarks.rs"

# Examples with feature requirements
[[example]]
name = "geojson_support"
required-features = ["geojson-support"]

[[example]]
name = "kml_support"
required-features = ["kml-support"]

[[example]]
name = "gpx_support"
required-features = ["gpx-support"]

[[example]]
name = "shapefile_support"
required-features = ["shapefile-support"]

[[example]]
name = "gpu_operations"
required-features = ["gpu"]

[[example]]
name = "geopackage_support"
required-features = ["geopackage"]

[[example]]
name = "flatgeobuf_support"
required-features = ["flatgeobuf-support"]

[[example]]
name = "mvt_support"
required-features = ["mvt-support"]

[[example]]
name = "topojson_support"
required-features = ["topojson-support"]
