[package]
name = "oxirs-samm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Semantic Aspect Meta Model (SAMM) implementation for OxiRS"
keywords = ["samm", "aspect-model", "semantic-web", "rdf", "digital-twin"]
categories = ["data-structures", "parser-implementations", "web-programming"]
readme = "README.md"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# OxiRS dependencies
oxirs-core.workspace = true
oxirs-shacl.workspace = true
oxirs-ttl.workspace = true

# RDF parsing
oxttl.workspace = true
oxrdf.workspace = true
oxiri.workspace = true
oxilangtag.workspace = true
oxsdatatypes.workspace = true

# SciRS2 for scientific computing
scirs2-core = { workspace = true, features = ["profiling", "leak_detection"] }
scirs2-graph = { workspace = true }
scirs2-stats = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
rayon.workspace = true
async-stream.workspace = true
futures.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
quick-xml = { workspace = true, features = ["serialize"] }
oxiarc-archive.workspace = true
base64.workspace = true

# Error handling and logging
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }

# Utilities
url.workspace = true
once_cell.workspace = true
regex.workspace = true
num_cpus.workspace = true
bytecount = "0.6"
reqwest.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
chrono = { workspace = true, features = ["serde"] }

# Template engine for custom code generation
tera = "1.20"

# Image processing (optional, for AASX custom thumbnails)
image = { workspace = true, optional = true }

# Graphviz rendering (optional, for SVG/PNG diagram generation)
graphviz-rust = { version = "0.9", optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }
proptest.workspace = true

[[bench]]
name = "parser_benchmarks"
harness = false

[[bench]]
name = "generator_benchmarks"
harness = false

[[bench]]
name = "validation_benchmarks"
harness = false

[[bench]]
name = "simd_benchmarks"
harness = false

[[bench]]
name = "large_model_benchmarks"
harness = false

[features]
default = []
codegen = []  # Code generation support (GraphQL, TypeScript)
aas = []      # Asset Administration Shell support
aasx-thumbnails = ["image"]  # Custom thumbnail support for AASX packages
graphviz = ["graphviz-rust"]  # SVG/PNG diagram rendering via Graphviz

[lints]
workspace = true
