[package]
name = "oxirs-samm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Semantic Aspect Meta Model (SAMM) implementation for OxiRS"
keywords = ["samm", "aspect-model", "semantic-web", "rdf", "digital-twin"]
categories = ["data-structures", "parser-implementations", "web-programming"]
readme = "README.md"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# OxiRS dependencies
oxirs-core.workspace = true

# RDF parsing
oxttl.workspace = true
oxrdf.workspace = true

# SciRS2 for scientific computing
scirs2-core = { workspace = true, features = ["profiling", "leak_detection"] }
scirs2-graph = { workspace = true }
scirs2-stats = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
rayon.workspace = true
async-stream.workspace = true
futures.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
quick-xml = { workspace = true, features = ["serialize"] }
oxiarc-archive.workspace = true
base64.workspace = true

# Error handling and logging
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }

# Utilities
url.workspace = true
once_cell.workspace = true
regex.workspace = true
lru.workspace = true
bytecount = "0.6"
reqwest.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
chrono = { workspace = true, features = ["serde"] }

# Template engine for custom code generation
# NOTE (cargo-upgrade sweep, 2026-07-02): PINNED to 1.x — tera 2.0 is a ground-up
# rewrite (own Value type decoupled from serde_json::Value; Filter<Arg,Res>/
# Function<Res> generic traits with ArgFromValue/Kwargs/&State; Serialize-based
# Context::insert). Migrating src/templates/mod.rs (6 custom filters + 2 public
# generic register_* wrappers with `for<'a> Filter<<Arg as ArgFromValue<'a>>::Output,
# Res>` bounds + json!->tera::Value context building + 6 Value::String sites + a
# Context lifetime fix + 21 test errors) is disproportionate for a version-bump
# sweep. tera is used ONLY here (zero workspace blast radius). Re-evaluate 2026-08-02.
tera = "1.20"

# Image processing (optional, for AASX custom thumbnails)
image = { workspace = true, optional = true }

# Graphviz rendering (optional, for SVG/PNG diagram generation)
graphviz-rust = { version = "0.9", optional = true }

[dev-dependencies]
tempfile.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }
proptest.workspace = true

[[bin]]
name = "parity_report"
path = "src/bin/parity_report.rs"

[[bin]]
name = "samm"
path = "src/bin/samm.rs"

[[bench]]
name = "parser_benchmarks"
harness = false

[[bench]]
name = "generator_benchmarks"
harness = false

[[bench]]
name = "validation_benchmarks"
harness = false

[[bench]]
name = "simd_benchmarks"
harness = false

[[bench]]
name = "large_model_benchmarks"
harness = false

[[bench]]
name = "parallel_correlation_bench"
harness = false

[features]
default = []
codegen = []  # Code generation support (GraphQL, TypeScript)
aas = []      # Asset Administration Shell support
aasx-thumbnails = ["image"]  # Custom thumbnail support for AASX packages
graphviz = ["graphviz-rust"]  # SVG/PNG diagram rendering via Graphviz
gpu = ["scirs2-core/gpu"]  # GPU-accelerated batch validation (off by default)

[lints]
workspace = true
