[package]
name = "oxirs-shacl"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SHACL Core + SHACL-SPARQL validator for RDF data validation"
keywords = ["shacl", "validation", "rdf", "constraints", "semantic-web"]
categories = ["data-structures", "parser-implementations", "science"]
rust-version.workspace = true

[dependencies]
oxirs-core.workspace = true

# SciRS2 dependencies for graph validation and analysis
scirs2-graph = { workspace = true }
scirs2-stats = { workspace = true }
scirs2-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex = "1.12"
uuid = { version = "1.18", features = ["v4", "serde"] }
indexmap = { version = "2.11", features = ["serde"] }
petgraph = "0.8"
rayon = { workspace = true, optional = true }
tokio = { version = "1.47", features = ["rt", "sync", "time"], optional = true }
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }
once_cell = "1.21"
dashmap = "6.1"
chrono = { version = "0.4", features = ["serde"] }
url.workspace = true
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
num_cpus.workspace = true
# rand functionality now provided by scirs2-core (use scirs2_core::random)
serde_yaml = "0.9"
semver = { version = "1.0", features = ["serde"] }
tracing-subscriber = "0.3"
wasmi = "0.40"  # Lightweight WASM interpreter for custom validators

[dev-dependencies]
criterion.workspace = true
proptest = "1.7"
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[bin]]
name = "w3c_test_runner"
path = "src/bin/w3c_test_runner.rs"

[[bin]]
name = "shacl_validator"
path = "src/bin/shacl_validator.rs"

[features]
default = ["core", "async", "parallel"]
core = []
sparql = []
serde = []
async = ["tokio", "futures", "futures-util", "tokio-stream"]
parallel = ["rayon"]

