[package]
name = "oxirs-star"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RDF-star and SPARQL-star grammar support for quoted triples"
keywords = ["rdf-star", "sparql-star", "quoted-triples", "rdf", "semantic-web"]
categories = ["data-structures", "parser-implementations", "database"]
rust-version.workspace = true

[dependencies]
oxirs-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"

# SciRS2 dependencies for high-performance RDF-star processing (SCIRS2 POLICY)
scirs2-core = { workspace = true, features = ["simd", "parallel", "memory_efficient", "profiling", "benchmarking", "random"] }
scirs2-graph.workspace = true  # For RDF graph algorithms
scirs2-stats.workspace = true   # For statistical analysis
scirs2-metrics.workspace = true # For performance metrics

# CLI and tooling dependencies
clap = { version = "4.4", features = ["derive"] }
num_cpus = "1.17"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.16"
rayon.workspace = true  # For parallel operations
bincode = "2.0.1"  # For efficient serialization

# Compression dependencies
flate2.workspace = true
zstd.workspace = true
lz4_flex.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "enhanced_benchmarks"
harness = false

[features]
default = []

